Changes CSS to avoid always-visible scrollbars on Chrome

--- a/front-end/src/app/login/login/login.component.scss
+++ b/front-end/src/app/login/login/login.component.scss
@@ -85,6 +85,6 @@
 	height: 100%;
 	width: 100%;
 	max-width: 100%;
-	overflow: scroll;
+	overflow: auto;
 	padding-bottom: 224px;
 }
